[gd_scene load_steps=12 format=2]

[ext_resource path="res://MainNavigation/UIMainButtons.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainNavigation/Slot.tscn" type="PackedScene" id=2]
[ext_resource path="res://SPRITES/UI/ButtonLong1Hover.png" type="Texture" id=3]
[ext_resource path="res://SPRITES/zMisc/noise.tres" type="Texture" id=4]
[ext_resource path="res://MainNavigation/CraftingScreen/CraftingScreen.gd" type="Script" id=5]
[ext_resource path="res://Fonts/Cinzel-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://SPRITES/UI/ButtonLong1.png" type="Texture" id=7]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded;

uniform sampler2D noiseTex;

uniform int numOctaves = 1;

float noise ( in vec2 uv )
{
    return texture(noiseTex,uv).x;
}

void fragment() {
	float r = noise(UV+noise(UV+fract(TIME*-0.1))+fract(TIME*0.05))*0.1;
	float g = noise(UV+noise(UV+fract(TIME*-0.15))+fract(TIME*0.01))*0.1;
	float b = noise(UV+noise(UV+fract(TIME*-0.11))+fract(TIME*0.08))*0.1;
	COLOR = vec4(r+0.1,g+0.1,b+0.1,1.0);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/numOctaves = 1
shader_param/noiseTex = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 6 )

[node name="CraftingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
Path_group_recipes = NodePath("RecipeScrollContainer/Recipes")
Path_button_base = NodePath("BaseSlot")
Path_group_augments = NodePath("Augments")
Path_button_craft = NodePath("CraftButton")
Path_type_select = NodePath("TypeSelect/Label")

[node name="BG" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.388235, 0.388235, 0.388235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIMainButtons" parent="." instance=ExtResource( 1 )]

[node name="BaseSlot" parent="." instance=ExtResource( 2 )]
margin_left = 505.442
margin_top = 21.4187
margin_right = 625.442
margin_bottom = 141.419

[node name="Augments" type="Control" parent="."]
margin_left = 33.9782
margin_top = 41.4187
margin_right = 208.978
margin_bottom = 373.419

[node name="Slot1" parent="Augments" instance=ExtResource( 2 )]
margin_left = 352.024
margin_right = 432.024
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="Slot2" parent="Augments" instance=ExtResource( 2 )]
margin_left = 256.024
margin_right = 336.024
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="Slot3" parent="Augments" instance=ExtResource( 2 )]
margin_left = 623.661
margin_top = 0.505966
margin_right = 703.661
margin_bottom = 80.506
rect_min_size = Vector2( 80, 80 )

[node name="Slot4" parent="Augments" instance=ExtResource( 2 )]
margin_left = 715.881
margin_top = -1.90735e-06
margin_right = 795.881
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="TypeSelect" type="ColorRect" parent="."]
margin_top = 141.925
margin_right = 1050.0
margin_bottom = 177.925
color = Color( 0, 0, 0, 0.298039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TypeSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
custom_fonts/font = SubResource( 3 )
text = "Select a base:"
valign = 1

[node name="RecipeScrollContainer" type="ScrollContainer" parent="."]
margin_left = 29.0
margin_top = 189.0
margin_right = 1029.0
margin_bottom = 680.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recipes" type="VBoxContainer" parent="RecipeScrollContainer"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftButton" type="TextureButton" parent="."]
visible = false
margin_left = 29.0
margin_top = 531.0
margin_right = 1029.0
margin_bottom = 680.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="CraftButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Craft"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BaseSlot" to="." method="removeRecipe" binds= [ false, 0 ]]
[connection signal="pressed" from="Augments/Slot1" to="." method="removeRecipe" binds= [ true, 0 ]]
[connection signal="pressed" from="Augments/Slot2" to="." method="removeRecipe" binds= [ true, 1 ]]
[connection signal="pressed" from="Augments/Slot3" to="." method="removeRecipe" binds= [ true, 2 ]]
[connection signal="pressed" from="Augments/Slot4" to="." method="removeRecipe" binds= [ true, 3 ]]
[connection signal="pressed" from="CraftButton" to="." method="craftItem"]
